=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.020 - Under Development

=over

=item *

Upgraded HTML::Template to the latest release, 2.7, to fix a bug where
a stale template could be returned from the cache under unusual
circumstances. [Sam]

=item *

Fixed a bug in the installer which prevented installing using an
element set contained within an add-on. [Sam]

=item *

Added the ability to pass a filename to Krang::ElementClass's
find_template() method.  [Matt]

=item *

Fixed a bug preventing deletions in the List Admin from working
correctly. [Matt]

=item *

Fixed a bug in the FedoraCore1 platform library that would fail to find
chkconfig unless it was in the user's PATH. [Sam]

=item *

Fixed a bug where elements using the default Krang::ElementClass
input_form() implementation would eventually cause browsers to slow to
a crawl and eventually crash.  The whole sordid tale is here:
http://perlmonks.org/index.pl?node_id=363214 [Sam]

=item *

Fixed a bug where clicking Publish on the Edit Media screen didn't
save changes. [Sam]

=item *

Fixed a bug where a story that failed to publish would still get a
'published' log entry.  [Sam]

=item *

Added support for Fedora Core 2. [Sam]

=item *

Fixed problem determining C<KRANG_ROOT> on Fedora Core 2 in all
Krang scripts. [Sam]

=back

=head2 v1.019 - Jun 04, 2004

=over

=item *

Fixed bug where C<krang_export> could only write output in directories
where C<KrangUser> had write permissions.  The output file is now
opened before su'ing to C<KrangUser>. [Sam]

=item *

Removed support for C<--append> from C<krang_export>.  This option was
never, to my knowledge, used and it didn't work after the permissions
fix above.  [Sam]

=item *

Changed the schema for the Krang::User XML format to make the new
'hidden' field optional.  This allows data files from pre-v1.017 Krang
to load in later Krangs. [Sam]

=item *
